fix(app): sticky icons on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@
   transform: translatey(20px);
   transition: opacity 0.25s ease, transform 0.25s ease-out;
   width: 360px;
-  z-index: 100;
+  z-index: 1000001;
   border: 2px solid #003169;
   background-color: white;
   overflow-x: hidden;
@@ -112,6 +112,20 @@
 .chat-visible {
   opacity: 1;
 }
+.chat_header_mobile{
+  display: none;
+}
+
+.chat_header_mobile h1 {
+  display: inline-block;
+  margin: 0px 2px;
+}
+
+.chat_header_mobile img {
+  float: right;
+  vertical-align: middle;
+  padding: 4px;
+}
 
 @media (max-width: 450px) {
   .chat-pop-up.chat-visible {
@@ -119,7 +133,17 @@
     top: 0;
     left: 0;
     border-radius: 0px;
-    height: 85vh;
+    height: 100vh;
     transform: translatey(0px);
+  }
+  .toggle-chat.chat-is-open{
+    display: none;
+  }
+  .chat_header_mobile{
+    background: #003169;
+    color:white;
+    font-family: Google Sans, Roboto, sans-serif;
+    display: block;
+    padding: 8px;
   }
 }
